--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <b>历年考研国家线</b>
         </h3>
         <p class="m2-time">
-            <a href="">2018预测</a>
+            <a href="" style="color: #358deb">2018预测</a>
             <a href="">2017</a>
             <a href="">2016</a>
             <a href="">2015</a>
