--- a/index.html
+++ b/index.html
@@ -609,9 +609,20 @@
     </div>
 
     <div class="foot">
-        <a href="">戳我预约</a>
+        <span>戳我预约</span>
     </div>
 
+    <!-- 预约弹框 -->
+    <form action=""  class="zg-appointment">
+        <div>
+            <em>&nbsp;</em>
+            <input type="text">
+            <input type="text">
+            <input type="submit" value="戳我预约">
+        </div>
+    </form>
+    <!-- 蒙板 -->
+    <p class="zg-mask">&nbsp;</p>
 </div>
 
 </body>
